--- a/app/src/main/res/layout/trailer_layout.xml
+++ b/app/src/main/res/layout/trailer_layout.xml
@@ -5,6 +5,7 @@
 
     <data>
         <variable name="trailer" type="com.example.android.popmovies1.data.Trailer" />
+        <variable name="traileradapter" type="com.example.android.popmovies1.data.TrailersAdapter" />
     </data>
 
 
@@ -15,7 +16,7 @@
 
         <TextView
             android:id="@+id/textview_trailer_type"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginBottom="10dp"
             android:layout_marginEnd="16dp"
@@ -32,7 +33,8 @@
             android:layout_height="90dp"
             android:contentDescription="@string/movie_trailer_thumbnail"
             app:imageUrl="@{trailer.imageUrl}"
-            android:scaleType="centerCrop"/>
+            android:scaleType="centerCrop"
+            android:adjustViewBounds="true"/>
 
     </LinearLayout>
 </layout>
