--- a/app/src/main/res/layout/activity_movie_detail.xml
+++ b/app/src/main/res/layout/activity_movie_detail.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:tools="http://schemas.android.com/tools"
+<layout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
@@ -43,6 +43,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="24dp"
+                android:layout_marginLeft="24dp"
                 android:layout_marginTop="44dp"
                 android:text="@{movie.year, default=@string/movie_date_placeholder}"
                 android:textAppearance="@style/Year"
@@ -54,6 +55,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="24dp"
+                android:layout_marginLeft="24dp"
                 android:layout_marginTop="16dp"
                 android:text="@{movie.vote, default=@string/movie_vote_placeholder}"
                 android:textAppearance="@style/TextAppearance.AppCompat.Medium"
@@ -85,7 +87,7 @@
                 android:id="@+id/textview_trailer_header"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Trailers"
+                android:text="@string/trailers"
                 android:layout_marginTop="10dp"
                 android:layout_marginBottom="10dp"
                 android:layout_marginStart="16dp"
@@ -96,7 +98,7 @@
 
             <android.support.v7.widget.RecyclerView
                 android:id="@+id/recycleViewTrailers"
-                android:layout_gravity="left"
+                android:layout_gravity="start"
                 android:layout_marginTop="10dp"
                 android:layout_marginBottom="10dp"
                 android:layout_marginStart="16dp"
@@ -104,6 +106,16 @@
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 app:layout_constraintTop_toBottomOf="@+id/textview_trailer_header" />
+
+            <TextView
+                android:id="@+id/trailererror"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:padding="16dp"
+                android:text="@string/notrailers"
+                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
+                android:visibility="invisible"
+                app:layout_constraintTop_toBottomOf="@+id/recycleViewTrailers"/>
 
             <View
                 android:id="@+id/divider2"
@@ -115,13 +127,13 @@
                 android:layout_marginEnd="16dp"
                 android:background="#000000"
                 android:visibility="visible"
-                app:layout_constraintTop_toBottomOf="@+id/recycleViewTrailers" />
+                app:layout_constraintTop_toBottomOf="@+id/trailererror" />
 
             <TextView
                 android:id="@+id/textview_review_header"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Reviews"
+                android:text="@string/reviews"
                 android:layout_marginTop="10dp"
                 android:layout_marginBottom="10dp"
                 android:layout_marginStart="16dp"
@@ -132,7 +144,7 @@
 
             <android.support.v7.widget.RecyclerView
                 android:id="@+id/recycleViewReviews"
-                android:layout_gravity="left"
+                android:layout_gravity="start"
                 android:layout_marginTop="10dp"
                 android:layout_marginBottom="10dp"
                 android:layout_marginStart="16dp"
@@ -140,6 +152,17 @@
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 app:layout_constraintTop_toBottomOf="@+id/textview_review_header" />
+
+            <TextView
+                android:id="@+id/reviewerror"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:padding="16dp"
+                android:text="@string/noreviews"
+                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
+                android:visibility="invisible"
+                app:layout_constraintTop_toBottomOf="@+id/recycleViewReviews"/>
+
 
             <TextView
                 android:id="@+id/textview_movie_title"
@@ -153,6 +176,8 @@
                 android:textAppearance="@style/WhiteHeader"
                 app:layout_constraintBottom_toBottomOf="@+id/imageview_backdrop"
                 app:layout_constraintStart_toStartOf="parent" />
+
+
 
         </android.support.constraint.ConstraintLayout>
     </android.support.v4.widget.NestedScrollView>
