--- a/app/src/main/res/layout/activity_movie_detail.xml
+++ b/app/src/main/res/layout/activity_movie_detail.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout
+<layout xmlns:tools="http://schemas.android.com/tools"
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
@@ -25,6 +25,20 @@
                 app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
+
+            <ImageView
+                android:id="@+id/imageview_favorite"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:layout_marginBottom="16dp"
+                android:layout_marginEnd="28dp"
+                android:layout_marginRight="28dp"
+                android:contentDescription="@string/favorite"
+                android:src="@drawable/heart"
+                android:visibility="invisible"
+                app:layout_constraintBottom_toBottomOf="@+id/textview_movie_title"
+                app:layout_constraintEnd_toEndOf="parent" />
+
 
             <ImageView
                 android:id="@+id/imageview_movie_poster"
@@ -61,6 +75,19 @@
                 android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                 app:layout_constraintStart_toEndOf="@+id/imageview_movie_poster"
                 app:layout_constraintTop_toBottomOf="@+id/textview_release_date" />
+
+            <Button
+                android:id="@+id/button_favorite"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="24dp"
+                android:layout_marginLeft="24dp"
+                android:layout_marginTop="13dp"
+                android:text="@string/add_to_favorites"
+                android:onClick="updateFavorite"
+                app:layout_constraintTop_toBottomOf="@+id/textview_vote_average"
+                app:layout_constraintStart_toEndOf="@+id/imageview_movie_poster" />
+
 
             <TextView
                 android:id="@+id/textview_overview"
