--- a/app/src/main/res/layout/moviehomelayout.xml
+++ b/app/src/main/res/layout/moviehomelayout.xml
@@ -1,15 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:orientation="vertical" android:layout_width="match_parent"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:gravity="center"    >
+    android:gravity="center">
 
     <ImageView
         android:id="@+id/imageview_movie_poster"
         android:layout_width="215dp"
         android:layout_height="300dp"
         android:contentDescription="@string/movie_poster_content_desc"
-        android:scaleType="centerCrop"/>
+        android:scaleType="centerCrop" />
 
-</LinearLayout>
+    <ImageView
+        android:id="@+id/imageview_favorite"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_marginStart="135dp"
+        android:layout_marginTop="5dp"
+        android:contentDescription="@string/favorite"
+        android:src="@drawable/heart"
+        android:visibility="visible" />
+
+
+</RelativeLayout>
