--- a/app/src/main/res/layout/activity_movie_detail.xml
+++ b/app/src/main/res/layout/activity_movie_detail.xml
@@ -59,7 +59,7 @@
                 android:layout_marginStart="24dp"
                 android:layout_marginLeft="24dp"
                 android:layout_marginTop="44dp"
-                android:text="@{movie.year, default=@string/movie_date_placeholder}"
+                android:text="@{movie.release_date, default=@string/movie_date_placeholder}"
                 android:textAppearance="@style/Year"
                 app:layout_constraintStart_toEndOf="@+id/imageview_movie_poster"
                 app:layout_constraintTop_toBottomOf="@+id/imageview_backdrop" />
