--- a/app/src/main/res/menu/sort.xml
+++ b/app/src/main/res/menu/sort.xml
@@ -8,4 +8,8 @@
         android:id="@+id/action_sortrating"
         android:orderInCategory="2"
         android:title="@string/sort_rating"/>
+    <item
+        android:id="@+id/action_favorites"
+        android:orderInCategory="3"
+        android:title="@string/show_only_favorites"/>
 </menu>
